fix(app.component): fix button on safari; (#18)

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -112,6 +112,7 @@ span {
   font-family: "SF Pro Text Medium";
   cursor: pointer;
   width: 200px;
+  max-height: 37px;
   img {
     padding-top: 2px;
   }
